@@ -1,4 +1,4 @@
-Jorn Baayen <jorn@nl.linux.org>
+Jorn Baayen <jbaayen@gnome.org>
 
 
 With additional help from:
