@@ -1,1 +1,1 @@
-Jorn Baayen <jorn@nl.linux.org>
+Jorn Baayen <jbaayen@gnome.org>
